packages/chisel-client/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    external-dns.alpha.kubernetes.io/ttl: "60"
    ingress.kubernetes.io/auth-secret: argo-sso
  labels:
    app.kubernetes.io/name: "argocd"
    app.kubernetes.io/component: edge
    app.kubernetes.io/part-of: autocloud
  name: argocd
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: citest.develop.cx
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - citest.develop.cx
      secretName: citest-develop-cx-tls
